k8s/prod/deployment-app-aws.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment
  labels:
    app: top-car-service-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: top-car-service-app
  template:
    metadata:
      labels:
        app: top-car-service-app
    spec:
      containers:      
      - name: top-car-service
        image: 711648264774.dkr.ecr.us-east-1.amazonaws.com/top-car-service-app:latest               
        ports:
        - containerPort: 8082
