k8s/prod/service-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: top-car-service-svc
  labels:
    app: top-car-service-app
spec:
  type: ClusterIP
  selector:
    app: top-car-service-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8082
